add final ersion of the scripts with figures and csv files

--- a/Config/config.ini
+++ b/Config/config.ini
@@ -1,5 +1,6 @@
 [FILES]
-interview_transcript = Data/01_transcript.txt
+interview_transcript = Data/Transcript_01_Reformatted.txt
+data_folder = Data
 
 [MODELS]
 # embedding_model = all-MiniLM-L6-v2
